# tch-rs

./: .gitignore  Cargo.toml  build.rs  justfile  rust-toolchain
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cuda-dev-env/: devcontainer.json
.devcontainer/cuda-env/: Dockerfile  devcontainer.json
.devcontainer/jetbrain-cuda-dev-env/: devcontainer.json
.devcontainer/jetbrain-cuda-dev-env/init-my-dev-env/: devcontainer-feature.json  install.sh
.devcontainer/scripts/: prepaet_compile_env.sh
.devcontainer/scripts/test-cuda-env/: install.sh
.devcontainer/scripts/vscode-cuda-dev-env/: install.sh
.devcontainer/test-cuda-env/: Dockerfile  devcontainer.json
.devcontainer/vscode-cuda-dev-env/: Dockerfile  devcontainer.json
.devcontainer/vscode-cuda-dev-env/init-my-dev-env/: install.sh
benches/: cuda_graph_benchmark.rs
src/: error.rs  lib.rs
src/wrappers/: cxx_wrapper.rs  cxx_wrappers_utils.rs  device.rs  mod.rs  tensor.rs  utils.rs
src/wrappers/cxx_wrapper/: comm_process_group.rs  cuda_event.rs  cuda_graph.rs  cuda_guards.rs  cuda_stream.rs
src/wrappers/torch_cuda/: cuda_event.rs  cuda_graph.rs  cuda_guards.rs  cuda_stream.rs  mod.rs
src/wrappers/torch_distributed/: comm_process_group.rs  mod.rs  multi-process-rust-test.sh  utils.rs
torch-sys/: Cargo.toml  build.rs
torch-sys/.cargo/: config  config.toml
torch-sys/libtch/: CMakeLists.txt
torch-sys/libtch/include/cxx-wrapper/: cxx_wrapper_utils.h  torch_comm_process_group.h  torch_comm_store.h  torch_cuda_event.h  torch_cuda_guard.h  torch_process_group_nccl.h  torch_utils.h
torch-sys/libtch/include/wrappers/: torch_utils.h  utils.h
torch-sys/libtch/include/wrappers/torch_cuda/: cuda_graph.h  cuda_stream.h
torch-sys/libtch/include/wrappers/torch_distributed/: comm_process_group.h  comm_store.h
torch-sys/libtch/src/cxx-wrapper/: cxx.cpp  cxx_wrapper_utils.cpp  torch_comm_process_group.cpp  torch_cuda_event.cpp  torch_cuda_graph.cpp  torch_cuda_guard.cpp  torch_cuda_stream.cpp  torch_process_group_nccl.cpp  torch_utils.cpp
torch-sys/libtch/src/wrappers/: cxx.cpp  torch_utils.cpp
torch-sys/libtch/src/wrappers/torch_cuda/: cuda_event.cpp  cuda_graph.cpp  cuda_guard.cpp  cuda_stream.cpp
torch-sys/libtch/tests/playground/: CMakeLists.txt  playground.cpp
torch-sys/src/: autocxx_wrapper.rs  cxx_wrapper.rs  lib.rs
torch-sys/src/autocxx_wrapper/: utils.rs
torch-sys/src/cxx_wrapper/: torch_comm_process_group.rs  torch_comm_store.rs  torch_cuda_event.rs  torch_cuda_graph.rs  torch_cuda_guard.rs  torch_cuda_stream.rs  torch_utils.rs
torch-sys/src/wrappers/: autocxx_wrappers.rs  mod.rs  torch_utils.rs  utils.rs
torch-sys/src/wrappers/torch_cuda/: cuda_event.rs  cuda_graph.rs  cuda_guard.rs  cuda_stream.rs  mod.rs
torch-sys/src/wrappers/torch_cuda/cuda_event/: cxx_wrappers.rs
torch-sys/src/wrappers/torch_cuda/cuda_graph/: cxx_wrappers.rs
torch-sys/src/wrappers/torch_cuda/cuda_guard/: cxx_wrappers.rs
torch-sys/src/wrappers/torch_cuda/cuda_stream/: cxx_wrappers.rs
torch-sys/src/wrappers/torch_distributed/: comm_process_group.rs  comm_store.rs  mod.rs
torch-sys/src/wrappers/torch_utils/: cxx_wrappers.rs
