[package]
name = "tch"
version = "0.13.0"
authors = [
    "Laurent Mazare <lmazare@gmail.com>",
]
edition = "2021"
build = "build.rs"

description = "Rust wrappers for the PyTorch C++ api (libtorch)."
repository = "https://github.com/LaurentMazare/tch-rs"
keywords = [
    "pytorch",
    "deep-learning",
    "machine-learning",
]
categories = [
    "science",
]
license = "MIT/Apache-2.0"
readme = "README.md"

exclude = [
    "examples/stable-diffusion/media/*",
]

[dependencies]
lazy_static = "1.3.0"
libc = "0.2.0"
ndarray = "0.15"
rand = "0.8"
thiserror = "1"
torch-sys = { version = "0.13.0", path = "torch-sys" }
zip = "0.6"
half = "2"
safetensors = "0.3.0"
cxx = "1.0"
tokio = { version = "1.29.1", features = ["time"] }

cpython = { version = "0.7.1", optional = true }
regex = { version = "1.6.0", optional = true }
image = { version = "0.24.5", optional = true }
clap = { version = "4.2.4", features = [
    "derive",
], optional = true }
serde_json = { version = "1.0.96", optional = true }
memmap2 = { version = "0.6.1", optional = true }
derive_builder = "0.12.0"

[dev-dependencies]
anyhow = "1"
criterion = "0.5.1"

[workspace]
members = [
    "torch-sys",
    "pyo3-tch",
    "examples/python-extension",
]

[features]
download-libtorch = [
    "torch-sys/download-libtorch",
]
python-extension = [
    "torch-sys/python-extension",
]
rl-python = [
    "cpython",
]
doc-only = [
    "torch-sys/doc-only",
]
cuda-tests = [
]
lto = ["torch-sys/lto"]

[package.metadata.docs.rs]
features = [
    "doc-only",
]

[[example]]
name = "reinforcement-learning"
required-features = [
    "rl-python",
]

[[example]]
name = "stable-diffusion"
required-features = [
    "regex",
]

[[example]]
name = "llama"
required-features = [
    "regex",
    "clap",
    "serde_json",
    "memmap2",
]

[[bench]]
name = "cuda_graph_benchmark"
harness = false
